# novi-tally

./: .gitignore  README.md  SETUP.md  config-example.toml  log.txt  pyproject.toml  reconcile_positions.py
examples/: reconcile_positions_1.py  reconcile_positions_2.py  reconcile_positions_3.py  reconcile_positions_4.py  utils.py
novi_tally/: __init__.py  api.py  config.py  protocols.py  schemas.py
novi_tally/connections/: file_systems.py  formidium.py  openfigi.py
novi_tally/dataloaders/: enfusion.py  formidium.py  ib.py
novi_tally/dataloaders/rjo/: __init__.py  headers.py  loaders.py
